# Multipass-Techincal-Assessment

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  ubuntu-parser.cpp
src/include/: myParser.hpp  ubuntu-parser.hpp
